unpackaged/main/default/objects/Call_Detail_Records__c/Call_Detail_Records__c.object-meta.xml
<CustomObject>
    <description>Used to table CDRs from VOIP monitor or other sources</description>
    <label>Call Detail Record</label>
    <nameField>
        <displayFormat>CDR-{0000000000}</displayFormat>
        <label>Call Detail Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Detail Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>