unpackaged/main/default/objects/Call_Detail_Records__c/fields/Access_Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Access_Circuit_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Circuit</label>
    <referenceTo>Access_Circuits__c</referenceTo>
    <relationshipLabel>Call Detail Records</relationshipLabel>
    <relationshipName>Call_Detail_Records</relationshipName>
    <type>Lookup</type>
</CustomField>