unpackaged/main/default/objects/Call_Detail_Records__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Call Detail Records</relationshipLabel>
    <relationshipName>Call_Detail_Records</relationshipName>
    <type>Lookup</type>
</CustomField>