unpackaged/main/default/objects/Call_Detail_Records__c/fields/Batch_JobID__c.field-meta.xml
<CustomField>
    <fullName>Batch_JobID__c</fullName>
    <label>Batch JobID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>