unpackaged/main/default/objects/Call_Detail_Records__c/fields/Call_Duration_Min_Sec_calculated__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Min_Sec_calculated__c</fullName>
    <formula>IF(ISBLANK( Call_Duration_Seconds__c ),null,
IF((MOD(( Call_Duration_Seconds__c )/60,1)*60) &gt; 10,
TEXT(FLOOR( ( Call_Duration_Seconds__c )/60)) + ":" + TEXT( FLOOR(MOD(( Call_Duration_Seconds__c )/60,1)*60) ),
TEXT(FLOOR( ( Call_Duration_Seconds__c )/60)) + ":0" + TEXT( FLOOR(MOD(( Call_Duration_Seconds__c )/60,1)*60) )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration Min:Sec</label>
    <type>Text</type>
</CustomField>