unpackaged/main/default/objects/Call_Detail_Records__c/fields/Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Minutes__c</fullName>
    <label>Call Duration (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>