unpackaged/main/default/objects/Call_Detail_Records__c/fields/Call_End_Short_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_End_Short_Date__c</fullName>
    <formula>Date(

/* Year Logic */
Value(left( Call_Term_timestamp__c,4))
,

/* Month Logic */

VALUE(MID(Call_Term_timestamp__c, FIND("-",Call_Term_timestamp__c)+1, 2))


,
/* Day Logic */
VALUE(MID(Call_Term_timestamp__c, FIND("-",Call_Term_timestamp__c)+4, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call End Short Date</label>
    <type>Date</type>
</CustomField>