unpackaged/main/default/objects/Call_Detail_Records__c/fields/Call_Orig_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Call_Orig_timestamp__c</fullName>
    <label>Call Start Time</label>
    <length>24</length>
    <type>Text</type>
</CustomField>