unpackaged/main/default/objects/Call_Detail_Records__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <length>24</length>
    <type>Text</type>
</CustomField>