unpackaged/main/default/objects/Call_Detail_Records__c/fields/Called_Domain__c.field-meta.xml
<CustomField>
    <fullName>Called_Domain__c</fullName>
    <label>Called_Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>