unpackaged/main/default/objects/Call_Detail_Records__c/fields/called_number__c.field-meta.xml
<CustomField>
    <fullName>called_number__c</fullName>
    <label>Called Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>