unpackaged/main/default/objects/Call_Detail_Records__c/fields/Caller_Domain__c.field-meta.xml
<CustomField>
    <fullName>Caller_Domain__c</fullName>
    <label>Caller_Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>