unpackaged/main/default/objects/Call_Detail_Records__c/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <label>Caller ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>