unpackaged/main/default/objects/Call_Detail_Records__c/fields/calling_number__c.field-meta.xml
<CustomField>
    <fullName>calling_number__c</fullName>
    <label>Calling Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>