unpackaged/main/default/objects/Call_Detail_Records__c/fields/Imported_from_VOIP_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Imported_from_VOIP_Monitor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Imported from VOIP Monitor</label>
    <type>Checkbox</type>
</CustomField>