unpackaged/main/default/objects/Call_Detail_Records__c/fields/Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>Source_Reference__c</fullName>
    <label>Source Reference</label>
    <length>24</length>
    <type>Text</type>
</CustomField>