unpackaged/main/default/objects/Call_Detail_Records__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Access_Circuit_ID__c</columns>
    <columns>Caller_Name__c</columns>
    <columns>calling_number__c</columns>
    <columns>called_number__c</columns>
    <columns>Call_Orig_timestamp__c</columns>
    <columns>Call_Term_timestamp__c</columns>
    <columns>Call_Duration_Min_Sec_calculated__c</columns>
    <columns>Call_Result__c</columns>
    <columns>Source_Reference__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Call_Direction__c</columns>
    <columns>Caller_Domain__c</columns>
    <columns>Called_Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>