unpackaged/main/default/objects/Call_Detail_Records__c/listViews/All_Company_Calls.listView-meta.xml
<ListView>
    <fullName>All_Company_Calls</fullName>
    <columns>Call_Orig_timestamp__c</columns>
    <columns>Call_Direction__c</columns>
    <columns>Access_Circuit_ID__c</columns>
    <columns>calling_number__c</columns>
    <columns>called_number__c</columns>
    <columns>Call_Duration_Seconds__c</columns>
    <columns>Call_Duration_Min_Sec_calculated__c</columns>
    <columns>Caller_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Company Calls</label>
    <language>en_US</language>
</ListView>