unpackaged/main/default/objects/Call_Detail_Records__c/listViews/All_IPro_Media.listView-meta.xml
<ListView>
    <fullName>All_IPro_Media</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Access_Circuit_ID__c</columns>
    <columns>Caller_Name__c</columns>
    <columns>calling_number__c</columns>
    <columns>called_number__c</columns>
    <columns>Call_Orig_timestamp__c</columns>
    <columns>Call_Term_timestamp__c</columns>
    <columns>Call_Duration_Seconds__c</columns>
    <columns>Call_Duration_Min_Sec_calculated__c</columns>
    <columns>Call_Result__c</columns>
    <columns>Source_Reference__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>IPro Media</value>
    </filters>
    <label>All - IPro Media</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>